<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cardio Care</string>
    <string name="topic_name">Cardio Care</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="consultant">Consultant</string>
    <string name="technician">Technician</string>
    <string name="icu_report">ICU Report</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="headline">Consultant Details</string>
    <string name="plus">"+"</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="addconsultantactivitylabel">"Add new Consultant"</string>
    <string name="addnurseactivitylabel">"Add new Nurse"</string>
    <string name="adddoctoractivitylabel">"Add new Doctor"</string>
    <string name="addtechnicianactivitylabel">"Add new Technician"</string>
    <string name="addicureportactivitylabel">"Add new ICU Report"</string>
    <string name="addpatientactivitylabel">"Add new Patient"</string>
    <string name="admit_date" tools:ignore="TypographyDashes">"Admit Date  (0000-00-00)"</string>
    <string name="nurse_registration">Nurse Registration</string>
    <string name="nic_number">NIC Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="role">Role</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="hospital">Hospital</string>
    <string name="department">Department</string>
    <string name="unit">Unit</string>
    <string name="ward">Ward</string>
    <string name="technician_registration">Technician Registration</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="icu_report_registration">ICU Report Registration</string>
    <string name="consultant_registration">Consultant Registration</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="admit_date_s">Admit Date</string>
    <string name="room_number">Room Number</string>
    <string name="code_number">Code Number</string>

    <!-- defining the array for spinner -->
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="status">
        <item>Active</item>
        <item>Inactive</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="role">
        <item>Main Consultant</item>
        <item>Assistant Consultant</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="patient_type">
        <item>"1"</item>
        <item>"2"</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="location">
        <item>Ward</item>
        <item>ICU</item>
        <item>Operation Theater</item>
    </array>

    <!-- defining the array for spinner -->
    <array name="doctor_role">
        <item>Main Doctor</item>
        <item>Assistant Doctor</item>
    </array>

    <array name="nurse_role">
        <item>Main Nurse</item>
        <item>Assistant Nurse</item>
    </array>

    <array name="technician_role">
        <item>Main Technician</item>
        <item>Assistant Technician</item>
    </array>

</resources>